# Unite-Hub

./: .codecov.yml  .deployment-state.json  .dockerignore  .env.agents.example  .env.claude.example  .env.example  .env.example.MISSING  .env.linear.example  .env.local.example  .env.monitoring.example  .env.whatsapp.example  .eslintrc.json  .github-issue-e-series-complete.md  .gitignore  .lighthouseagenticrc.json  .mcp-config.json  .mcp.json  .npmrc  .percyrc.json  .percyrc.yml  .plan.md  .prettierrc.json  .rgignore  .skills.md  .vercelignore  100_PERCENT_COMPLETION_FINAL.md  100_PERCENT_COMPLETION_ROADMAP.md  ACTION-PLAN.md  ACTIVATION_CHECKLIST.md  ADDITIONAL_COMPONENTS_COMPLETE.md  ADD_GUARDIAN_ROLE_COLUMN.sql  ADD_SUPABASE_ENV_VARS.md  ADMIN_SETUP_INSTRUCTIONS.md  ADVANCED-SVIE-DELIVERY.md  ADVANCED-SVIE-MODULES-GUIDE.md  AETHEROS_ACTIVATION_CHECKLIST.md  AETHEROS_IMPLEMENTATION.md  AETHEROS_QUICK_START.md  AETHEROS_USAGE_EXAMPLES.md  AETHEROS_VISUAL_CODEX_V2.md  (+1310 more)
.beads/: issues.jsonl
.claude/: ADVANCED_TOOL_USE_STRATEGY.md  AGENTIC-LAYER.md  AGENT_HARNESS.md  AUTH_PATTERN_REFERENCE.md  CLAUDE.md  CLAUDE_PLATFORM_REFERENCE.md  DESIGN_SELF_HEALING_MODE_OVERVIEW.md  DESIGN_SYSTEM_AGENTS.md  LONG_RUNNING_AGENTS.md  NEW_SKILLS_MANIFEST.md  PHASE1_SETUP_COMPLETE.md  PHASE2_COMPLETE.md  PLAN_MODE_PROTOCOL.md  PRODUCTION_QUALITY_FRAMEWORK.md  PROGRESS.md  README.md  RLS_WORKFLOW.md  SCHEMA_REFERENCE.md  SHADOW-OBSERVER-GUIDE.md  SKILLS_CREATED_SUMMARY.md  SKILLS_REFERENCE.md  VAULT-INDEX.md  WORKFLOWS.md  agent.md  claude.md  config.json  context-manifest.md  design-system-override.json  launch.json  mcp-config.json  mcp-docker.json  mcp-minimal.json  mcp.json  settings.json  settings.local.json
.clinerules/: long-running-agent.md
.do/: app.yaml
.github/: AUTONOMOUS_PR_SETUP.md  CODEOWNERS  DIRECTORY.md  PULL_REQUEST_TEMPLATE.md  SECRETS-QUICK-START.md  SECRETS.md  dependabot.yml  pr-phase8-body.md
.husky/: post-merge  pre-commit
.pi/: README.md
.planning/: ROADMAP.md  STATE.md  test-output.txt
.portfolio/: ACCOUNTANT-COVER-NOTE.md  BOOKKEEPER-ACTIVATION.md  ENTITY-REGISTER.md  PORTFOLIO.yaml  README.md  package-lock.json  package.json
.security/: SECURITY_AUDIT_2025-12-03.md
.skills/: AGENTS.md  README.md  install.ps1  install.sh
.zap/: context.json  rules.tsv
apps/backend/: .env.local.example  Dockerfile  README.md  pyproject.toml  railway.json  run-tests.ps1
apps/backend/examples/: use_agentic_layer.py
apps/backend/src/agents/: base_agent.py  factory.py  intelligent_router.py  marketing_agents.py
apps/backend/src/agents/long_running/: harness.py
apps/backend/src/agents/prd/: __init__.py  analysis_agent.py  test_generator.py
apps/backend/src/api/: deps.py  error_handling.py
apps/backend/src/api/middleware/: request_id.py  security_headers.py
apps/backend/src/api/routes/: analytics.py  contractors.py  discovery.py  documents.py  health.py  prd.py  rag.py  search.py  task_queue.py  webhooks.py  workflow_builder.py  workflows.py
apps/backend/src/api/schemas/: workflow_builder.py
apps/backend/src/config/: database.py  settings.py
apps/backend/src/db/: __init__.py  models.py  workflow_models.py
apps/backend/src/memory/: models.py  session_manager.py  store.py
apps/backend/src/models/: __init__.py  anthropic.py  base_provider.py  google.py  openrouter.py
apps/backend/src/monitoring/: __init__.py
apps/backend/src/rag/: __init__.py  chunkers.py  models.py  storage.py
apps/backend/src/skills/: __init__.py  executor.py  loader.py  parser.py
apps/backend/src/state/: __init__.py  events.py  manager.py  null_store.py
apps/backend/src/telemetry/: usage_tracker.py
apps/backend/src/tools/: browser.py  mcp_integration.py  mcp_server.py  search.py  web_search.py
apps/backend/src/verification/: __init__.py
apps/backend/src/workflow/: db_executor.py  models.py  state.py
apps/backend/src/workflows/: continuous_improvement.py  pr_automation.py
apps/backend/tests/: test_memory_embeddings.py  test_memory_models.py  test_memory_store.py  test_verification.py
apps/backend/tests/contracts/: test_prd_provider.py
apps/backend/tests/integration/: test_memory_integration.py
apps/backend/tests/performance/: test_memory_performance.py
apps/backend/tests/rag/: test_chunkers.py
apps/backend/tests/workflow/: test_db_executor.py  test_state.py
(+13292 files in other folders)
